# qt6purchasing

./: CMakeLists.txt  LICENSE  README.md  abstracttransaction.h
android/: googleplaystorebackend.h  googleplaystoreproduct.cpp  googleplaystoreproduct.h  googleplaystoretransaction.h
apple/: appleappstorebackend.mm  appleappstoretransaction.h  appleappstoretransaction.mm
src/: abstractproduct.cpp  abstractproduct.h  abstractstorebackend.cpp  abstractstorebackend.h  abstracttransaction.cpp
src/android/: GooglePlayBilling.java  googleplaystorebackend.cpp  googleplaystorebackend.h  googleplaystoretransaction.cpp
src/apple/: appleappstorebackend.h  appleappstorebackend.mm  appleappstoreproduct.h  appleappstoreproduct.mm
